fix social links on mobile view to inline

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -339,8 +339,7 @@
      height: 100px;
      width: 100px;
      border-radius: 50%;
-     margin: 25px;
-     
+     margin: 25px;     
     }
    }
    
@@ -377,7 +376,7 @@
   .burger_icon {
    color: #fff;  
   }
-  
+ 
   @media (max-width:991px) {
    .navbar-collapse {
     height: 100vh;
@@ -400,19 +399,19 @@
    .social-links-sm a {
     display: inline;
     padding: 10px;
-   }
-    .social-links-sm i {
-     font-size: x-large;
-      color: #fff;
-   }
+   }    
   } 
+  .social-links-sm i {
+    font-size: x-large;
+     color: #fff;
+  }
   .social-links-sm .fa-facebook:hover {
    color: #3b5998;
   }  
   .social-links-sm .fa-youtube:hover {
     color: #c4302b;
    }  
-   .social-links-sm .fa-instgram:hover {
+   .social-links-sm .fa-instagram:hover {
     color: #3f729b ;
    }
   @media (min-width:768px) and (max-width: 991px) {
